--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.9.1"
+    "mongodb": "^4.9.1",
+    "multer": "^1.4.5-lts.1"
   }
 }
